Remove default JVM paramaters
This commit breaks the backward compatibility.